--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  position: relative;
+  top:-30vh;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  /*flex-direction: column;*/
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  /*flex-direction: row;*/
 }
 
 .App-logo {
@@ -7,14 +18,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    width: 100%;
+    position: fixed;
+    top: 1vh;
+    font-weight: 900;
+    font-size: larger;
 }
 
 .App-link {
